# ChangeOrderino

./: .env.example  .gitignore  LICENSE  NOTICE  README.md  THIRD-PARTY-LICENSES  THIRD_PARTY_LICENSES.md  build.sh  docker-compose.yml
.github/: SETUP-CHECKLIST.md
certs/: .gitkeep
docs/: AZURE_AD_SETUP.md  O365_QUICKSTART.md  adding-admin-users.md
migrations/: 01-init-db.sql  02-add-user-roles.sql
services/api/: Dockerfile  README.md  add_comprehensive_pdf_settings.py  add_paid_tracking.py  add_pdf_settings.py  add_total_labor_hours.py  pyproject.toml  test_pdf_integration.py
services/api/app/: main.py
services/api/app/api/v1/: __init__.py  approvals.py  assets.py  audit.py  dashboard.py  email_health.py  email_logs.py  health.py  line_items.py  projects.py  settings.py  tnm_tickets.py  utils.py
services/api/app/core/: __init__.py  auth.py  config.py  database.py  settings_init.py
services/api/app/middleware/: security.py
services/api/app/migrations/: 001_add_pm_email_to_projects.sql
services/api/app/models/: __init__.py  app_settings.py  approval.py  asset.py  audit_log.py  email_log.py  equipment_item.py  labor_item.py  material_item.py  project.py  subcontractor_item.py  tnm_ticket.py  user.py
services/api/app/schemas/: line_items.py  project.py  settings.py  tnm_ticket.py
services/api/app/services/: __init__.py  audit_service.py  email_service.py  pdf_generator.py  queue_service.py  reminder_cancellation.py  settings_service.py  storage.py  user_service.py
services/api/app/templates/: rfco_pdf.html
services/api/app/utils/: pdf_helpers.py
(+126 files in other folders)
