[tool.poetry]
name = "changeorderino-api"
version = "1.0.0"
description = "ChangeOrderino API - Construction Change Order Management"
authors = ["TRE Construction"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.119.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.0"
asyncpg = "^0.31.0"
alembic = "^1.13.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
python-multipart = "^0.0.18"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-keycloak = "^4.7.0"
aioredis = "^2.0.1"
redis = "^5.2.0"
rq = "^2.0.0"
minio = "^7.2.0"
aiofiles = "^24.1.0"
jinja2 = "^3.1.0"
reportlab = "^4.2.0"
weasyprint = "^63.1"
structlog = "^25.0.0"
websockets = "^15.0"
httpx = "^0.28.0"
pillow = "^11.0.0"
pymupdf = "^1.24.0"
python-dateutil = "^2.9.0"
email-validator = "^2.2.0"
slowapi = "^0.1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
black = "^24.10.0"
ruff = "^0.8.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
